--- a/realestate/templates/listings/search.html
+++ b/realestate/templates/listings/search.html
@@ -12,20 +12,24 @@
             <div class="form-row">
               <div class="col-md-4 mb-3">
                 <label class="sr-only">Keywords</label>
-                <input type="text" name="keywords" class="form-control" placeholder="Keyword (Pool, Garage, etc)">
+                <input value="{{ values.keywords }}" type="text" name="keywords" class="form-control" placeholder="Keyword (Pool, Garage, etc)">
               </div>
 
               <div class="col-md-4 mb-3">
                 <label class="sr-only">City</label>
-                <input type="text" name="city" class="form-control" placeholder="City">
+                <input value="{{ values.city }}" type="text" name="city" class="form-control" placeholder="City">
               </div>
 
               <div class="col-md-4 mb-3">
                 <label class="sr-only">State</label>
                 <select name="state" class="form-control">
                   <option selected="true" disabled="disabled">State (All)</option>
-                  {% for key,value in state_choices.items %}
-                      <option value="{{ key }}">{{ value }}</option>
+                    {% for key,value in state_choices.items %}
+                      <option value="{{ key }}"
+                              {% if key == values.state %}
+                                selected
+                              {% endif %}
+                      >{{ value }}</option>
                     {% endfor %}
                 </select>
               </div>
@@ -37,7 +41,13 @@
                 <select name="bedrooms" class="form-control">
                   <option selected="true" disabled="disabled">Bedrooms (Any)</option>
                     {% for key,value in bedroom_choices.items %}
-                      <option value="{{ key }}">{{ value }}</option>
+                      <option value="{{ key }}"
+
+                              {% if key == values.bedrooms %}
+                                selected
+                              {% endif %}
+
+                      >{{ value }}</option>
                     {% endfor %}
                 </select>
               </div>
@@ -45,7 +55,13 @@
                 <select name="price" class="form-control">
                   <option selected="true" disabled="disabled">Max Price (All)</option>
                     {% for key,value in price_choices.items %}
-                      <option value="{{ key }}">{{ value }}</option>
+                      <option value="{{ key }}"
+
+                              {% if key == values.price %}
+                                selected
+                              {% endif %}
+
+                      >{{ value }}</option>
                     {% endfor %}
                 </select>
               </div>
