--- a/realestate/templates/accounts/login.html
+++ b/realestate/templates/accounts/login.html
@@ -11,6 +11,9 @@
                 <i class="fas fa-sign-in-alt"></i> Login</h4>
             </div>
             <div class="card-body">
+              <!-- alerts -->
+              {% include 'partials/_alerts.html' %}
+
               <form action="{% url 'login' %}" method="post">
                   {% csrf_token %}
                 <div class="form-group">
