--- a/realestate/templates/pages/index.html
+++ b/realestate/templates/pages/index.html
@@ -67,6 +67,9 @@
     </div>
   </section>
 
+  <!-- alerts -->
+  {% include 'partials/_alerts.html' %}
+
   <!-- Listings -->
   <section id="listings" class="py-5">
     <div class="container">
