--- a/realestate/templates/base.html
+++ b/realestate/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Custom -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <title>Real Estate App</title>
+    <title>Real Estate App {% block title %} {% endblock %}</title>
 </head>
 <body>
     <!-- Top Bar -->
