--- a/realestate/templates/listings/listing.html
+++ b/realestate/templates/listings/listing.html
@@ -37,7 +37,14 @@
   <!-- Listing -->
   <section id="listing" class="py-4">
     <div class="container">
+      <div class="row">
+        <!-- alerts -->
+        {% include 'partials/_alerts.html' %}
+
+      </div>
+
       <a href="{% url 'listings' %}" class="btn btn-light mb-4">Back To Listings</a>
+
       <div class="row">
         <div class="col-md-9">
           <!-- Home Main Image -->
@@ -176,7 +183,7 @@
           <form method="post" action="{% url 'contact' %}">
             {% csrf_token %}
             {% if user.is_authenticated %}
-              <input type="hidden" name="user_id" value="user.id">
+              <input type="hidden" name="user_id" value="{{ user.id }}">
             {% else %}
               <input type="hidden" name="user_id" value="0">
             {% endif %}
@@ -184,7 +191,7 @@
             <input type="hidden" name="listing_id" value="{{ listing.id }}">
             <div class="form-group">
               <label for="property_name" class="col-form-label">Property:</label>
-              <input type="text" name="listing" class="form-control" value="{{ listing.title }}" disabled>
+              <input type="text" name="listing" class="form-control" value="{{ listing.title }}">
             </div>
             <div class="form-group">
               <label for="name" class="col-form-label">Name:</label>
