--- a/ecommerce/templates/homepage.html
+++ b/ecommerce/templates/homepage.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <title>Hello, world!</title>
   </head>
@@ -21,6 +23,7 @@
         <div class="row">
             <div class="col-xs-12">
                 {{ content }}
+                <img src="{% static 'img/mount.jpg' class='img-fluid' %}" />
             </div>
         </div>
 
