base template done

--- a/ecommerce/products/templates/products/list.html
+++ b/ecommerce/products/templates/products/list.html
@@ -1,10 +1,17 @@
-<!--{{ object_list }}-->
+{% extends 'base.html' %}
 
-{% for obj in object_list %}
-
-<a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a> <br/>
-
-{% endfor %}
+{% block content %}
+    <div class="container">
+        <div class="row">
+        {% for obj in object_list %}
+             <div class="col">
+<!--            <a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a> <br/>-->
+            {% include 'products/snippets/card.html' with instance=obj %}
+             </div>
+        {% endfor %}
+        </div>
+    </div>
+{% endblock %}
 
 <!--{'paginator': None,-->
 <!--'page_obj': None,-->
