--- a/ecommerce/products/templates/products/detail.html
+++ b/ecommerce/products/templates/products/detail.html
@@ -1,9 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {{ object.title }} <br/>
-    {{ object.description }} <br/>
-    {% if object.image %}
-        <img src="{{ object.image.url }}" class="img-fluid"/> <br/>
-    {% endif %}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>{{ object.title }} </h1>
+            {{ object.created|timesince }}
+            {{ object.description|linebreaks }} <br/>
+            {% if object.image %}
+                <img src="{{ object.image.url }}" class="img-fluid"/> <br/>
+            {% endif %}
+        </div>
+    </div>
+</div>
+
 {% endblock %}
