--- a/ecommerce/products/templates/products/snippets/card.html
+++ b/ecommerce/products/templates/products/snippets/card.html
@@ -1,10 +1,10 @@
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;margin-top:10px;">
     {% if instance.image %}
         <img class="card-img-top" src="{{ instance.image.url }}" alt="{{ instance.title }} logo">
     {% endif %}
   <div class="card-body">
     <h5 class="card-title">{{ instance.title }}</h5>
-    <p class="card-text">{{ instance.description }}</p>
+    <p class="card-text">{{ instance.description|linebreaks|truncatewords:12 }}</p>
     <a href="{{ instance.get_absolute_url }}" class="btn btn-primary">View</a>
     <a href="{% url 'products:detail' slug=instance.slug %}" class="btn btn-warning">URL Shortcut</a>
   </div>
