--- a/ecommerce/templates/bootstrap/example.html
+++ b/ecommerce/templates/bootstrap/example.html
@@ -83,7 +83,8 @@
 <!--</main>-->
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>-->
+<script src="{% static 'js/jquery-3.2.1.slim.min.js' %}"></script>
 <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
 <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
 </body>
