search text input

--- a/ecommerce/templates/bootstrap/example.html
+++ b/ecommerce/templates/bootstrap/example.html
@@ -31,15 +31,16 @@
         }
       }
     </style>
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this templates -->
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <nav class="navbar navbar-expand-md navbar-dark bg-info fixed-top">
+    <a class="navbar-brand" href="#">Navbar</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
@@ -70,13 +71,128 @@
 
 <!--<main role="main" class="container">-->
     <div class="container">
-        <div class="alert alert-primary" role="alert">
-          This is a primary alert—check it out!
+      <div class="row">
+        <div class="col">
+          <div class="alert alert-secondary" role="alert">Navigasi</div>
         </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4 ml-auto mb-3">
+          <input type="text" class="form-control" placeholder="Search.." />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-lg-2 order-12">
+          <div class="alert alert-secondary" role="alert">Bottom content Item</div>
+        </div>
+        <div class="col-12 col-lg-8 mx-auto order-6">
+          <div class="alert alert-primary" role="alert" style="min-height:800px;">
+              <div class="row">
+                <div class="col-auto">
+                  <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+                </div>
+                <div class="col-10">
+                  <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-2 order-1">
+          <div class="alert alert-secondary" role="alert">Top content item</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          COntainer
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+      </div>
+
     </div>
     <div class="container-fluid">
-        <div class="alert alert-warning" role="alert">
-          This is a primary alert—check it out!
+      <div class="row">
+        <div class="col">
+          COntainer fluid
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-primary" role="alert">This is a primary alert—check it out!</div>
+        </div>
+        <div class="col-1">
+          <div class="alert alert-secondary" role="alert">This is a primary alert—check it out!</div>
         </div>
     </div>
 
