--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -12,7 +12,9 @@
 
   <body>
     {% include 'base/navbar.html' with brand_name='ECommerce' %}
+    <div class="container">
     {% block content %}{% endblock %}
+    </div>
 
     {% include 'base/js.html' %}
 
