--- a/ecommerce/templates/homepage.html
+++ b/ecommerce/templates/homepage.html
@@ -14,11 +14,11 @@
     <h1>Hello, world!</h1>
 </div>
 
-<div class="container">
+
     <div class="row">
         <div class="col-xs-12">
             {{ content }}
-            <img src="{% static 'img/mount.jpg' class='img-fluid' %}" />
+            <img src="{% static 'img/mount.jpg' %}" class='img-fluid' />
         </div>
     </div>
 
@@ -31,6 +31,6 @@
         </div>
 
     {% endif %}
-</div>
+
 
 {% endblock %}
