--- a/ecommerce/templates/homepage.html
+++ b/ecommerce/templates/homepage.html
@@ -11,7 +11,7 @@
 {% block content %}
 <div class="text-center">
     <h1>{{ title }}</h1>
-    <h1>Hello, world!</h1>
+    <h1>Hello, {{ nama }}</h1>
 </div>
 
 
@@ -26,7 +26,7 @@
 
         <div class="row">
             <div class="col-xs-12">
-                {{ premium_content }}
+                {{ premium_content }} Hallo, {{ nama }}
             </div>
         </div>
 
