--- a/news/news_project/templates/base/menu_child.html
+++ b/news/news_project/templates/base/menu_child.html
@@ -1,7 +1,7 @@
 {% for child in children %}
 
 <ul class="treeview-menu">
-    <li class="active"><a href="{% url child.link|add:':list' %}">
+    <li><a href="{% url child.link|add:':list' %}">
         <i class="{{ child.icon }}"></i> {{ child }}</a>
     </li>
 </ul>
