--- a/news/news_project/templates/base/sidebar.html
+++ b/news/news_project/templates/base/sidebar.html
@@ -33,7 +33,7 @@
             <li class="header">MAIN NAVIGATION</li>
             {% for parent in parent_menu %}
 
-                    <li class="active treeview">
+                    <li class="treeview">
                         <a href="#">
                             <i class="{{ parent.icon }}"></i> <span>{{ parent.name }}</span>
                             <i class="fa fa-angle-left pull-right"></i>
