--- a/news/news_project/templates/dashboard.html
+++ b/news/news_project/templates/dashboard.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
 <!-- Content Header (Page header) -->
 <section class="content-header">
