--- a/news/news_project/templates/base.html
+++ b/news/news_project/templates/base.html
@@ -8,6 +8,7 @@
     <title>{{ title }}</title>
       {% include 'base/css.html' %}
       {% block css_link %}{% endblock %}
+      {{ form.media }}
   </head>
 
   <body class='hold-transition skin-blue sidebar-mini'>
