--- a/news/news_project/templates/base/js.html
+++ b/news/news_project/templates/base/js.html
@@ -2,6 +2,10 @@
 
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/jQuery-2.1.4.min.js' %}"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+<script>
+    $.widget.bridge('uibutton', $.ui.button);
+</script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
 <!-- FastClick -->
