--- a/news/news_project/portals/templates/portal.html
+++ b/news/news_project/portals/templates/portal.html
@@ -4,28 +4,22 @@
 
     <div class="col-md-8 blog-main">
       <h3 class="pb-4 mb-4 font-italic border-bottom">
-        From the Firehose
+        {{ title }}
       </h3>
 
         {% for article in articles %}
         <div class="blog-post">
-            <h2 class="blog-post-title">{{ article.title }}</h2>
+            <h2 class="blog-post-title"><a href="{% url 'portals:single' article.slug %}">{{ article.title }}</a></h2>
             <p class="blog-post-meta">{{ article.input_date }} <a href="#">{{ article.user_input }}</a></p>
 
-            {{ article.content|truncatewords:50|safe }} Read More
+            {{ article.content|truncatewords:50|safe }}
+            <a href="{% url 'portals:single' article.slug %}">Read More</a>
 
 
         </div><!-- /.blog-post -->
         {% endfor %}
 
-        <nav class="blog-pagination">
-            <a class="btn btn-outline-primary" href="#">Older</a>
-            <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Newer</a>
-        </nav>
+        {% include 'navigation.html' %}
     </div>
-
-
-
-
 
 {% endblock %}
