--- a/news/news_project/portals/templates/base/header_portal.html
+++ b/news/news_project/portals/templates/base/header_portal.html
@@ -4,7 +4,7 @@
             <a class="text-muted" href="#">Subscribe</a>
         </div>
         <div class="col-4 text-center">
-            <a class="blog-header-logo text-dark" href="#">Large</a>
+            <a class="blog-header-logo text-dark" href="/">Daffa News</a>
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
             <a class="text-muted" href="#" aria-label="Search">
@@ -23,7 +23,7 @@
 <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
         {% for category in categories %}
-        <a class="p-2 text-muted" href="#">{{ category }}</a>
+        <a class="p-2 text-muted" href="{% url 'portals:archive' category.slug  %}">{{ category }}</a>
         {% endfor %}
 
     </nav>
