--- a/news/news_project/articles/templates/form_article.html
+++ b/news/news_project/articles/templates/form_article.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block css_link %}
-<link rel="stylesheet" href="{% static 'plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' %}">
+<!--<link rel="stylesheet" href="{% static 'plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' %}">-->
 {% endblock %}
 
 {% block content %}
