--- a/news/news_project/portals/templates/base_portal.html
+++ b/news/news_project/portals/templates/base_portal.html
@@ -27,6 +27,7 @@
     </style>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <link href="{% static 'css/blog45.css' %}" rel="stylesheet">
+    {{ form.media }}
   </head>
   <body>
   <div class="container">
@@ -43,5 +44,7 @@
   </main>
 
   {% include 'base/footer_portal.html' %}
+
+  {% block js_script %}{% endblock %}
   </body>
 </html>
