--- a/ecommerce2/store/templates/cart.html
+++ b/ecommerce2/store/templates/cart.html
@@ -10,8 +10,8 @@
 
             <table class="table">
                 <tr>
-                    <th>Items: 3</th>
-                    <th>Total: $42</th>
+                    <th>Items: {{ order.get_count_order }}</th>
+                    <th>Total: ${{ order.get_total_order|floatformat:2 }}</th>
                     <th>
                         <a style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Checkout</a>
                     </th>
@@ -29,21 +29,23 @@
                 <div style="flex:1">Total</div>
             </div>
 
+            {% for item in items %}
             <div class="cart-row">
                 <div style="flex:2">
-                    <img class="row-image img-fluid" src="{% static 'images/placeholder.png' %}" />
+                    <img class="row-image img-fluid" src="{{ item.product.imageUrl }}" />
                 </div>
-                <div style="flex:2">Product 1</div>
-                <div style="flex:1">$28</div>
+                <div style="flex:2">{{ item.product.name }}</div>
+                <div style="flex:1">${{ item.product.price|floatformat:2 }}</div>
                 <div style="flex:1">
-                    <p class="quantity">2</p>
+                    <p class="quantity">{{ item.quantity }}</p>
                     <div class="quantity">
-                        <img class="chg-quantity" src="{% static 'images/arrow-up.png' %}" />
-                        <img class="chg-quantity" src="{% static 'images/arrow-down.png' %}" />
+                        <img data-product="{{ item.product.id }}" data-action="add" class="chg-quantity update-card" src="{% static 'images/arrow-up.png' %}" />
+                        <img data-product="{{ item.product.id }}" data-action="remove" class="chg-quantity update-card" src="{% static 'images/arrow-down.png' %}" />
                     </div>
                 </div>
-                <div style="flex:1">$32</div>
+                <div style="flex:1">{{ item.get_total_price }}</div>
             </div>
+            {% endfor %}
         </div>
     </div>
 </div>
