--- a/ecommerce2/store/templates/checkout.html
+++ b/ecommerce2/store/templates/checkout.html
@@ -41,6 +41,7 @@
         <br/>
         <div class="box-element hidden" id="payment-info">
             <small>Paypal Options</small>
+            <button id="make-payment">Make payment</button>
         </div>
     </div>
     <div class="col-lg-6">
@@ -48,15 +49,49 @@
             <a class="btn btn-outline-dark" href="{% url 'cart' %}">Back to cart</a>
             <hr/>
             <h3>Order Summary</h3>
+            {% for item in items %}
             <div class="cart-row">
-                <div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}"/></div>
-                <div style="flex:2"><p>Product 1</p></div>
-                <div style="flex:1"><p>$10</p></div>
-                <div style="flex:1"><p>aa</p></div>
+                <div style="flex:2"><img class="row-image" src="{{ item.product.imageUrl }}"/></div>
+                <div style="flex:2"><p>{{ item.product }}</p></div>
+                <div style="flex:1"><p>${{ item.product.price|floatformat:2 }}</p></div>
+                <div style="flex:1"><p>x{{ item.quantity }}</p></div>
             </div>
-            <h5>Items: 2</h5>
-            <h5>Total: $20</h5>
+            {% endfor %}
+            <h5>Items: {{ order.get_count_order }}</h5>
+            <h5>Total: ${{ order.get_total_order|floatformat:2 }}</h5>
         </div>
     </div>
 </div>
+
+<script>
+    console.log(user)
+    var shipping = '{{ order.shipping }}';
+    if (shipping == 'False') {
+        document.getElementById('shipping-info').innerHTML = '';
+    }
+
+    if (user != 'AnonymousUser') {
+        document.getElementById('user-info').innerHTML = ''
+    }
+
+    if ((shipping == 'False') && (user != 'AnonymousUser')) {
+        document.getElementById('form-wrapper').classList.add('hidden')
+        document.getElementById('payment-info').classList.remove('hidden')
+    }
+
+    var form = document.getElementById('form')
+    form.addEventListener('submit', function(e) {
+        e.preventDefault()
+        document.getElementById('form-button').classList.add('hidden')
+        document.getElementById('payment-info').classList.remove('hidden')
+    });
+
+    document.getElementById('make_payment').addEventListener('click', function() {
+        submitFormData()
+    });
+
+    function submitFormData(){
+        console.log('submit form')
+    }
+</script>
 {% endblock %}
