--- a/ecommerce2/store/templates/store.html
+++ b/ecommerce2/store/templates/store.html
@@ -3,37 +3,24 @@
 
 {% block content %}
 <div class="row">
+    {% for product in products %}
     <div class="col-lg-4">
+        {% if product.image %}
+        <img class="thumbnail img-fluid" src="{{ product.image.url }}"/>
+        {% else %}
         <img class="thumbnail img-fluid" src="{% static 'images/placeholder.png' %}"/>
+        {% endif %}
         <div class="box-element product">
-            <h3>Product</h3>
+            <h3>{{ product.name }}</h3>
             <hr/>
-            <button class="btn btn-outline-secondary add-btn">Add to cart</button>
+            <button data-product="{{ product.id }}" data-action="add" class="btn btn-outline-secondary add-btn update-card">Add to cart</button>
             <a class="btn btn-outline-success" href="#">View</a>
-            <h4 style="display:inline-block;float:right;">$20</h4>
+            <h4 style="display:inline-block;float:right;">${{ product.price|floatformat:2 }}</h4>
         </div>
     </div>
+    {% endfor %}
 
-    <div class="col-lg-4">
-        <img class="thumbnail img-fluid" src="{% static 'images/placeholder.png' %}"/>
-        <div class="box-element product">
-            <h3>Product</h3>
-            <hr/>
-            <button class="btn btn-outline-secondary add-btn">Add to cart</button>
-            <a class="btn btn-outline-success" href="#">View</a>
-            <h4 style="display:inline-block;float:right;">$20</h4>
-        </div>
-    </div>
 
-    <div class="col-lg-4">
-        <img class="thumbnail img-fluid" src="{% static 'images/placeholder.png' %}"/>
-        <div class="box-element product">
-            <h3>Product</h3>
-            <hr/>
-            <button class="btn btn-outline-secondary add-btn">Add to cart</button>
-            <a class="btn btn-outline-success" href="#">View</a>
-            <h4 style="display:inline-block;float:right;">$20</h4>
-        </div>
-    </div>
+
 </div>
 {% endblock %}
