--- a/ecommerce2/store/templates/base.html
+++ b/ecommerce2/store/templates/base.html
@@ -16,7 +16,7 @@
 
     <script type="text/javascript">
         var user='{{ request.user }}';
-        console.log(user);
+        //console.log(user);
         function getCookie(name) {
             let cookieValue = null;
             if (document.cookie && document.cookie !== '') {
@@ -33,6 +33,28 @@
             return cookieValue;
         }
         const csrftoken = getCookie('csrftoken');
+
+        function getCookie(name) {
+            var cookieArr = document.cookie.split(";");
+
+            for (var i=0;i < cookieArr.length; i++) {
+                var cookiePair = cookieArr[i].split("=");
+
+                if (name == cookiePair[0].trim()) {
+                    return decodeURIComponent(cookiePair[1]);
+                }
+            }
+            return null;
+        }
+
+        var cart = JSON.parse(getCookie('cart'))
+
+        if (cart == undefined) {
+            cart = {};
+            console.log('Cart created', cart);
+            document.cookie = 'cart=' + JSON.stringify(cart) + ';domain=;path=/'
+        }
+        console.log('Cart = ', cart)
     </script>
 
     <style>
@@ -75,7 +97,7 @@
                 <a href="{% url 'cart' %}">
                     <img id="cart-icon" src="{% static 'images/cart.png' %}" />
                 </a>
-                <p id="cart-total">{{ order.get_count_order }}</p>
+                <p id="cart-total">{{ cartItems }}</p>
             </form>
         </div>
     </nav>
