--- a/ecommerce2/store/templates/checkout.html
+++ b/ecommerce2/store/templates/checkout.html
@@ -38,7 +38,8 @@
         <br/>
         <div class="box-element hidden" id="payment-info">
             <small>Paypal Options</small>
-            <button id="make-payment">Make payment</button>
+<!--            <button id="make-payment">Make payment</button>-->
+            <div id="paypal-button-container"></div>
         </div>
     </div>
     <div class="col-lg-6">
@@ -60,10 +61,41 @@
     </div>
 </div>
 
+<script src="https://www.paypal.com/sdk/js?client-id=AWecrmUdBJskjc8gcBL_lidEfEpCU-nbgH_wsWL5H9pZhU2in3FFQwu4T0pvmQSKx80tbInY2HEY97Fe&currency=USD&disable-funding=credit"></script>
+
 <script>
-    console.log(user)
+    var total = '{{ order.get_total_order }}'
+    // Render the PayPal button into #paypal-button-container
+    paypal.Buttons({
+
+        // Set up the transaction
+        createOrder: function(data, actions) {
+            return actions.order.create({
+                purchase_units: [{
+                    amount: {
+                        value: parseFloat(total).toFixed(2)
+                    }
+                }]
+            });
+        },
+
+        // Finalize the transaction
+        onApprove: function(data, actions) {
+            return actions.order.capture().then(function(details) {
+                // Show a success message to the buyer
+                //alert('Transaction completed by ' + details.payer.name.given_name + '!');
+                submitFormData()
+            });
+        }
+
+
+    }).render('#paypal-button-container');
+</script>
+
+<script>
+
     var shipping = '{{ order.shipping }}';
-    var total = '{{ order.get_total_order }}';
+
 
     if (shipping == 'False') {
         document.getElementById('shipping-info').innerHTML = '';
@@ -85,9 +117,9 @@
         document.getElementById('payment-info').classList.remove('hidden')
     });
 
-    document.getElementById('make-payment').addEventListener('click', function() {
-        submitFormData();
-    });
+    //document.getElementById('make-payment').addEventListener('click', function() {
+    //    submitFormData();
+    //});
 
     function submitFormData(){
         console.log('submit form')
