--- a/ecommerce2/store/templates/base.html
+++ b/ecommerce2/store/templates/base.html
@@ -9,8 +9,6 @@
     <meta name="generator" content="Jekyll v3.8.5">
     <title>{{ title }} - Ecommerce</title>
 
-<!--    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/starter-template/">-->
-
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
 
@@ -91,9 +89,16 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'store' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'store' %}">Welcome {{ user.get_username }}</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="#" class="btn btn-danger">Login</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
+            {% else %}
+                <a href="/admin/login/?next=/" class="btn btn-success">Login</a>
+            {% endif %}
                 <a href="{% url 'cart' %}">
                     <img id="cart-icon" src="{% static 'images/cart.png' %}" />
                 </a>
@@ -110,7 +115,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
     <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
     </script>
-<!--    <script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"></script>-->
+
     <script src="{% static 'js/cart.js' %}"></script>
 </body>
 </html>
